# baize-board

./: ._pflash.raw  .gitignore  .gitmodules  README.md  README.rst  baize.dtb  baize.dts  boot.rom  build_all.sh  cmd.txt  debug.sh  mount-rootfs.sh  run-baremetal.sh  run.sh  startup.nsh
app/trusted/: build.sh
rtos/app/: Cargo.toml.workspace  cmd.txt
rtos/app/customize_macros/: Cargo.toml
rtos/app/framework_macros/: Cargo.toml
rtos/app/framework_macros/src/: lib.rs
rtos/app/rust/: Cargo.toml  build.rs
rtos/app/rust/.cargo/: config.toml
rtos/app/rust/src/: lib.rs
rtos/app/rust/src/features/: example.rs  feat_1.rs  feat_2.rs  mod.rs
rtos/app/rust/src/framework/: bus.rs  event.rs  handler.rs  init.rs  mod.rs  myevent.rs
rtos/app/rust/src/macros/: binding.rs  mod.rs  print.rs
rtos/app/rust/src/platform/: alloc.rs  mod.rs  print.rs
rtos/app/rust/tests/: integration_test.rs
rtos/app/rust/tests/features/: it_feat1.rs  mod.rs
rtos/libc/: CMakeLists.txt
rtos/libc/src/: printf.c  putchar.c  snprintf.c
supporting/: android.cfg  baize.dtb  baize.dts  domu.cfg  download_rootfs.sh  fake.dtsi  logcat.sh  mount-rootfs.sh  start-android.sh  start-domu.sh  startup-xen.nsh  startup.nsh  umount-rootfs.sh  virtio-gpu.dts  xen.cfg  xen.dtb  xen.dts
tools/: logcat.sh  mount-rootfs.sh
