[package]
name = "rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "rust"
crate-type = ["staticlib", "rlib"]

[profile.release]
opt-level = 'z'

[build-dependencies]
bindgen = "0.59"

[lints.rust]
warnings = "deny"

[lints.clippy]
todo = "warn"

[dependencies]
linked_list_allocator = "0.10"


